--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -1,1 +1,6 @@
-@import 'pages/Root';
+@import 'abstracts/variables';
+
+@import 'components/link-list';
+@import 'components/navigation';
+
+@import 'pages/root';
